# CH-Api-Authenticator

./: .env.example  .gitignore  .gitlab-ci.yml  API_VERSIONING.md  Cargo.toml  README.md  config.toml
.cargo/: audit.toml
.jira/: create-us.ps1  update-us-no-docker.ps1
data/: compromised-complex-passwords.txt
docs/: TEST-DEBT.md
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs  validation.rs
src/domain/: events.rs  mod.rs  role.rs  terms.rs  user.rs
src/handlers/: admin.rs  analytics.rs  health.rs  internal.rs  login.rs  me.rs  mod.rs  password.rs  ping.rs  register.rs  roles.rs  session.rs  settings.rs  validate.rs
src/middleware/: auth.rs  mod.rs  tracing.rs
src/repository/: login_events.rs  mod.rs  refresh_tokens.rs  reset_tokens.rs  roles.rs  settings.rs  users.rs
src/services/: client_ip.rs  jwt.rs  mailer.rs  missive.rs  mod.rs  password.rs  rate_limit.rs  relay.rs  reset_token.rs  secure_token.rs  whitelist.rs
tests/: api_admin.rs  api_health.rs  api_login.rs  api_logs.rs  api_me.rs  api_password_change.rs  api_password_reset.rs  api_ping.rs  api_refresh.rs  api_register.rs  api_roles.rs  api_validate.rs  e2e.rs  e2e_sprint2.rs  qvl_scrum175_aud_iss.rs  qvl_scrum178_cookies.rs  qvl_scrum178_password_policy.rs  qvl_scrum196_budgy_audience.rs  qvl_scrum254_user_deleted.rs  qvl_us01_internal_secret.rs  qvl_us07_mojibake_register.rs  qvl_us09_migration_jwt.rs  qvl_us11_versioning.rs
tests/common/: mod.rs
